# claude-hub

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: makefile.yml
src/: app.rs  config.rs  main.rs
src/data/: correlator.rs  mod.rs  session_registry.rs  tmux.rs  transcript.rs  watcher.rs
src/model/: event.rs  feed.rs  mod.rs  session.rs
src/ui/: detail_panel.rs  event_feed.rs  layout.rs  mod.rs  session_table.rs  status_bar.rs
