[package]
name = "claude-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "9.0.0-rc.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
